@@ -1,0 +1,28 @@
+Decimal                Octal                    Hex                   HEX                   
+0                      0                        0                     0                     
+1                      1                        1                     1                     
+2                      2                        2                     2                     
+3                      3                        3                     3                     
+4                      4                        4                     4                     
+7                      7                        7                     7                     
+8                      10                       8                     8                     
+9                      11                       9                     9                     
+10                     12                       a                     A                     
+11                     13                       b                     B                     
+12                     14                       c                     C                     
+13                     15                       d                     D                     
+14                     16                       e                     E                     
+15                     17                       f                     F                     
+16                     20                       10                    10                    
+32                     40                       20                    20                    
+64                     100                      40                    40                    
+127                    177                      7f                    7F                    
+128                    200                      80                    80                    
+255                    377                      ff                    FF                    
+256                    400                      100                   100                   
+32767                  77777                    7fff                  7FFF                  
+65535                  177777                   ffff                  FFFF                  
+2147483647             17777777777              7fffffff              7FFFFFFF              
+4294967295             37777777777              ffffffff              FFFFFFFF              
+4294967295             37777777777              ffffffff              FFFFFFFF              
+
